update test data DB And Create Docker-compose

--- a/build.gradle
+++ b/build.gradle
@@ -30,11 +30,11 @@ dependencies {
 	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.2'
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'junit:junit:4.12'
-	implementation 'junit:junit:4.12'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
+	testCompile "org.testcontainers:mariadb:1.15.2"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
